add styling in css  layout of img of user-profile dp and name in the center of web page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="text" placeholder="Enter Git-Hub Username " class="input-username"/>
             <div class="Btn">Search</div>
         </div>
-        <div class="row">
+        <div class="info-display-div">
             <div class="user-info">
                 <div class="user-img">
                   <img src="@" alt="GitHub Profile Picture">
@@ -24,17 +24,13 @@
                   <h3>Username</h3>
                 </div>
                 <div class="follow">
-                  <div class="followers">
+                  <div class="item followers">
                     <h2>Followers</h2>
                     <span>0</span
                   </div>
-                  <div class="following">
+                  <div class="item following">
                     <h2>Following</h2>
                     <span>0</span>
-                  </div>
-                  <div class="repos">
-                    <h2>Repos</h2>
-                    <h3>0</h3>
                   </div>
                 </div>
                 <div class="visit-user">
