--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                     <div class="repo-name">Repo Name</div>
                     <div class="repo-details">
                       <div class="info-star">
-                        <i class="1"></i>
+                        <i class="bx bxs-star"></i>
                       </div>
                       <div class="info-fork">
-                        <p><i class="class"></i></p>
+                        <p><i class="bx bx-git-repo-forked"></i></p>
                       </div>
                       <div class="info-size">
-                        <p><i class="class"></i></p>
+                        <p><i class="bx bxs-file"></i></p>
                       </div>
                     </div>
 
