--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container">
         <div class="search-wrapper">
             <input type="text" placeholder="Enter Git-Hub Username " class="input-username"/>
-            <div class="Btn">Search</div>
+            <div class="Btn">Search User</div>
         </div>
         <div class="info-display-div">
             <div class="user-info">
                 <div class="user-img">
-                  <img src="@" alt="GitHub Profile Picture">
+                  <img src="image/photo1.jpg" alt="GitHub Profile Picture">
                 </div>
                 <div class="user-name">
                   <h2>Name</h2>
