Formatting the html code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="follow">
                   <div class="item followers">
                     <h2>Followers</h2>
-                    <span>0</span
+                    <span>0</span>
                   </div>
                   <div class="item following">
                     <h2>Following</h2>
