Displayed imaged,added radius and made some minor changes in both htmml and CSS files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="info-display-div">
             <div class="user-info">
                 <div class="user-img">
-                  <img src="image/photo1.jpg" alt="GitHub Profile Picture">
+                  <img src="image/photo1.jpg" alt="Git-Hub Profile Picture">
                 </div>
                 <div class="user-name">
                   <h2>Name</h2>
