Search User button is displayed and updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="search-wrapper">
             <input type="text" placeholder="Enter Git-Hub Username " class="input-username"/>
-            <div class="Btn">Search User</div>
+            <div class="btn">Search User</div>
         </div>
         <div class="info-display-div">
             <div class="user-info">
