Add background image code and Repos change to repo

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 </div>
             </div>
             <div class="repos">
-                <h2>REPO's</h2>
+                <h2>Repo</h2>
                 <div class="repo-list">
                   <div class="items">
-                    <div class="repo-name">Repo Name</div>
+                    <div class="repo-name"><h3>Repo Name</h3></div>
                     <div class="repo-details">
                       <div class="info-star">
                         <i class="bx bxs-star"></i>
