Image added in image folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Profile Search</title>
     <link rel="stylesheet" href="styles.css" />
-    <!-- Boxicons CSS -->
+    <!-- gitasBoxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
