--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
             </div>
         </div>
     </div>
+    
+    <!-- <div class="footer">
+        <div class="developer">
+            <i class='bx bxs-user-rectangle'></i>
+            <p>Meet Our Developers</p>
+        </div>
+        <div class="developer">
+            <i class='bx bxl-github'></i>
+            <p>Contribute on Github</p>
+        </div> -->
+    <div id="developer-card" class="card hidden">
+      <h2>Meet Our Developers</h2>
+      <p>John Doe - Frontend Developer</p>
+      <p>Jane Smith - Backend Developer</p>
+      <p>Emily Johnson - UI/UX Designer</p>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
