Add a Loading line that display after 5 sec, and add a developer name and Pictures

--- a/index.html
+++ b/index.html
@@ -70,10 +70,16 @@
             <p>Contribute on Github</p>
         </div> -->
     <div id="developer-card" class="card hidden">
+      <div class="progress-bar"></div>
       <h2>Meet Our Developers</h2>
-      <p>John Doe - Frontend Developer</p>
-      <p>Jane Smith - Backend Developer</p>
-      <p>Emily Johnson - UI/UX Designer</p>
+    <div class="developer">
+      <img src="./image/Developer-DP/amanxsyed.jpg" alt="Syed Aman Shah" class="developer-photo">
+      <a href="https://github.com/amanxsyed" target="_blank">Syed Aman Shah</a>
+    </div>
+    <div class="developer">
+      <img src="#" alt="Jane Smith" class="developer-photo">
+      <a href="https://github.com/umarabdullah-991" target="_blank">Umar Abdullah</a>
+    </div>
     </div>
     <script src="app.js"></script>
   </body>
