Get developer name, pic and profile link from github by using their API

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <div id="developer-card" class="card hidden">
       <div class="progress-bar"></div>
       <h2>Meet Our Developers</h2>
-    <div class="developer">
-      <img src="./image/Developer-DP/amanxsyed.jpg" alt="Syed Aman Shah" class="developer-photo">
-      <a href="https://github.com/amanxsyed" target="_blank">Syed Aman Shah</a>
+    <div id="developer-1" class="developer">
+      <img id="developer-1-photo" alt="amanxsyed" class="developer-photo">
+      <a id="developer-1-link" target="_blank">Syed Aman Shah</a>
     </div>
-    <div class="developer">
-      <img src="#" alt="Jane Smith" class="developer-photo">
-      <a href="https://github.com/umarabdullah-991" target="_blank">Umar Abdullah</a>
+    <div id="developer-2" class="developer">
+      <img id="developer-2-photo" alt="umarabdullah-991" class="developer-photo">
+      <a id="developer-2-link" target="_blank">Umar Abdullah</a>
     </div>
     </div>
     <script src="app.js"></script>
