--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- gitasBoxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <!-- ficon links -->
+    <link rel="apple-touch-icon" sizes="180x180" href="image/photo1.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/photo1.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/photo1.jpg">
+    <link rel="manifest" href="image/photo1.jpg">
   </head>
   <body>
     <div class="container">
